--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,21 @@
 /*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+body{
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  text-align: center;
+}
+
+h1{
+  padding: 20px 20px 20px 20px;
+  font-size: 40px;
+  font-weight: 700;
+  text-decoration: underline;
+  color: white;
+  background: #0058FF;
+}
+
+p{
+  margin-top: 1px;
+  padding: 20px 20px 20px 20px;
+  color: white;
+  background: #003291;
+}
