--- a/08/global.css
+++ b/08/global.css
@@ -1,2 +1,77 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: white;
+  font-weight: bold;
+  padding: 20px;
+  background-color: #64276A;
+  border-style: solid;
+  border-color: #7D3289;
+  border-width: 1px;
+  padding: 20px 20px 20px 160px;
+  font-size: 30px;
+}
+h2{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  padding: 20px 20px 6px 155px;
+  background-color: #454545;
+  font-size: 20px;
+}
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  border-bottom: solid;
+  border-color: #D9D9D9;
+  border-width: 1px;
+  background-color: #454545;
+  padding: 0px 30px 20px 20px;
+}
+
+.month{
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+  background-color: #454545;
+  font-size: 25px;
+  padding: 18px 10px 17px 20px;
+  border-bottom-style: solid;
+  border-color: white;
+  border-width: 1px;
+
+}
+.festival{
+  font-size: 15px;
+  font-weight: normal;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+a {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  background-color: black; 
+  font-size: 20px;
+  padding: 0px 200px 0px 0px;
+  white-space: nowrap;
+  margin: 0px 0px 0px 0px
+}
+
+.location{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
+  background-color: #FFFFFF;
+}
+.dates{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
+  background-color: #C1C1C1;
+}
+
+
+
+
+
+
