--- a/07/global.css
+++ b/07/global.css
@@ -37,13 +37,9 @@ h1 {
 }
 
 .month {
+  border-bottom: 1px solid white;
   background: #333333;
   padding-left: 20px;
-  color: yellow;
-  font-size: 15px;
-  border-bottom: 1px solid yellow;
-  padding-top: 22px;
-  padding-bottom: 20px
 }
 
 .month h3 {
@@ -52,7 +48,8 @@ h1 {
   font-weight: bold;
   text-decoration: underline;
   text-transform: uppercase;
-  padding-bottom: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 a {
@@ -64,6 +61,9 @@ a {
   color: white;
 }
 
-.festival {
-  padding-top: 10px;
+.location {
+  color: black;
+  background: white;
+  padding: 3px;
+  
 }
