--- a/09/global.css
+++ b/09/global.css
@@ -1,2 +1,23 @@
-/* Actual font is unknown. Use this--it's close enough: */
+
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+a{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
+  padding: 13px 6px 6px 6px;
+  font-size: 11px;
+  font-weight: bold;
+  color: white;
+  border-radius:4px;
+  text-transform: uppercase;
+  background-color: #567592;
+}
+#subscribe{
+  float: left;
+  margin: 19px 20px 10px 10px;
+}
+#login{
+  float: left;
+  margin: 20px 20px 20px 0px;
+}
+.clear{
+  clear: both;
+}
