--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,36 @@
 /*font-family: Georgia, Times, "Times New Roman", serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body{
+  
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
+}
+
+h1{
+  font-size: 30px;
+  padding: 20px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 800;
+  border-bottom: solid orange 1px;
+}
+
+p{
+  margin: 20px;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: -2px;
+  text-align: left;
+}
+
+h2{
+
+}
+
+ul{
+
+}
+
+ol{
+
+}
