--- a/07/global.css
+++ b/07/global.css
@@ -1,2 +1,67 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+/*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  height: 800px;
+  width: 430px;
+  color: #FFFFFF;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+
+}
+
+#intro {
+  background: #333333;
+  padding: 0px 30px 20px 21px;
+  font-size: 16px;
+  border-bottom: 1px solid #FFFFFF;
+}
+
+.festival {
+    padding: 10px 0px 0px 23px;
+    font-size: 14px;
+    background: #333333;
+    line-height: 125%;
+}
+
+.month {
+  border-bottom: 2px solid #FFFFFF;
+  padding-bottom: 17px;
+  background: #333333;
+
+}
+
+h3 {
+  font-size: 22px;
+  padding: 19px 20px 10px 21px;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+h1 {
+  background: #85277D;
+  text-align: center;
+  font-size: 30px;
+  padding: 20px;
+  border-bottom: 1px solid #BC35B1;
+}
+
+h2 {
+  text-align: center;
+  font-size: 20px;
+  padding: 20px 20px 10px 29px;
+}
+
+a:link {
+  color: #FFFFFF; 
+  background: #000000; 
+  text-decoration: none;
+  font-size: 16px;
+  text-transform: uppercase;
+  }
