--- a/10/global.css
+++ b/10/global.css
@@ -1,1 +1,13 @@
 /* Actual font is unknown. Use any from past assignments. */
+.box{
+  width: 100px;
+  float: left;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  word-wrap:break-word;
+  border-style:solid;
+  border-width: 2px;
+}
+#clear{
+  clear:both;
+}
