--- a/05/global.css
+++ b/05/global.css
@@ -1,2 +1,87 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+
+body h1, h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
+}
+
+p, h2 {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+
+h1 {
+  text-align: center;
+  background-color: #85277D;
+  padding: 20px;
+  padding-bottom: 19px;
+  font-size: 24pt;
+  letter-spacing: -1px;
+  color: white;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #C839BC;
+
+}
+
+h2, p#intro {
+  color: white;
+
+}
+
+h2 {
+    font-size: 15pt;
+    padding-top: 19px;
+    text-align: center;
+}
+
+p#intro {
+    padding-bottom: 20px;
+    padding-right: 15px;
+    padding-top: 8px;
+    border-bottom-style: solid;
+    border-bottom-color: #CCCCCC; 
+    border-bottom-width: 1px;
+
+}
+
+p, h2, h3 {
+    background-color: #333333;
+
+}
+
+
+p, h3 {
+    padding-left: 20px;
+
+}
+
+h3 {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 16pt;
+  text-transform: uppercase;
+  color: white;
+  text-decoration: underline;
+}
+
+a {
+  text-transform: uppercase;
+  color: white;
+  background-color: #000000;
+  padding: 2px;
+  padding-top: none;
+  text-decoration: none;
+  font-size: 12pt;
+  line-height: 10px;
+}
+
+ p:not(#intro):not(a) {
+  color: white;
+  font-size: 10pt;
+  padding-top: 5px;
+  line-height: 15px;
+}
+
+
