--- a/05/global.css
+++ b/05/global.css
@@ -1,2 +1,52 @@
-/*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+
+h1 {
+  background-color: #863D83;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: #FFFFFF;
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  padding: 20px;
+  border-bottom: 1px solid #CC6CC3;
+}
+
+h2 {
+  background-color: #303030;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;  
+}
+
+#intro {
+  background-color: #303030;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #FFFFFF;
+  padding: 8px 20px 20px 20px;
+  border-bottom: 1px solid #FFFFFF;
+}
+
+h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  background-color: #303030;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  padding: 20px;
+}
+
+a[href^="http"] {
+  
+}
+
+
+
+
+
+
+
+
