--- a/09/global.css
+++ b/09/global.css
@@ -1,2 +1,22 @@
 /* Actual font is unknown. Use this--it's close enough: */
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+
+.button_container {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  float: left;
+  padding: 20px;
+  border: red solid 5px;
+}
+
+
+a:link {
+    background-color: blue;
+    color: white;
+    padding: 4px 5px 8px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
