minor changes to 05

--- a/05/global.css
+++ b/05/global.css
@@ -1,5 +1,7 @@
 body {
   background-color: #323232;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #FFFFFF;
 }
 
 h1 {
@@ -14,18 +16,17 @@ h1 {
 }
 
 h2 {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #FFFFFF;
   text-align: center;
   font-size: 20px;
   padding-top: 20px;  
 }
 
 #intro {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #FFFFFF;
+  font-size: 16px;
   padding: 8px 20px 20px 20px;
+  border-left: 1px solid red;
   border-bottom: 1px solid #FFFFFF;
+  margin: 0;
 }
 
 h3 {
@@ -35,26 +36,22 @@ h3 {
   font-size: 22px;
   text-transform: uppercase;
   text-decoration: underline;
-  padding: 20px;
+  margin: 20px;
 }
 
-/*{
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #FFFFFF;
+p {
   font-size: 14px;
-  padding: 5px 2px 5px 2px;
-  margin-left: 20px; 
-  margin-bottom: 5px; 
-}*/
+  margin: 20px;
+  border: 1px dashed green;
+}
 
-a[href^="http"] {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+a {
   background-color: #000000;
   color: #FFFFFF;
   font-size: 16px;
   text-transform: uppercase;
-  padding: 3px;
-  margin-left: 20px;
+  padding: 2px;
+  margin-bottom: 10px;
 }
 
 
