--- a/05/global.css
+++ b/05/global.css
@@ -20,12 +20,23 @@ h2 {
   border-top: solid 1px #AD4EB4;  
 }
 
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: white;
+  background-color: #2D2D2D;  
+  padding-top:  10px; 
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
 #intro {
   background-color: #2D2D2D;
   color: white;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 9px 20px 20px 21px;
-  border-bottom: solid 1px white;  
+  border-bottom: solid 1px #DCDCDC;  
+  font-size: 16px;
 }
 
 h3 {
@@ -37,3 +48,33 @@ h3 {
   background-color: #2D2D2D;
   text-transform: uppercase;
 }
+
+a {
+  background-color: black;
+  color: white;
+  padding: 1px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding-top: 5px;
+  padding-right: 4px;
+  padding-bottom: 1px;
+  padding-left: 0px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
