05 as done as I can get today. all lines up except the spacing around the <br> elements. Can't do anything with a br tag. Maybe I will get back to this someday.

--- a/05/global.css
+++ b/05/global.css
@@ -44,11 +44,16 @@ h2 {
 
 #intro {
   color: white;
-  padding-bottom: 50px;
+  font-size: 16px;
+  padding-bottom: 21px;
   padding-top: 10px;
-  padding-bottom: 25px;
+  margin-bottom: 1px;
+  line-height: 100%;
+  margin-right: 25px;
+
 }
 
+/*the date and place info is p-tagged. the copy about the diary is p-tagged but also has it's own id of "intro" so use that for ways the diary intro differs from this.*/
 p {
 
   color: white;
@@ -56,11 +61,16 @@ p {
   font-size: 14px;
   font-weight: ;
   background-color: #332F2F;
+  margin-color: #332F2F; 
   text-align: left;
   padding-left: 20px;
   padding-right:15px;
-  padding-top: 5px;
-  padding-bottom: 10px;
+  line-height: 100%;
+  padding-top: 15px;
+  padding-bottom: 5px;
+  border-color: #332F2F;
+  border-top: 0px;
+  border-bottom: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
   margin-left: 0px;
@@ -80,9 +90,10 @@ h3 {
   text-decoration: underline;
   text-transform: uppercase;
   padding-top: 20px;
-  padding-bottom: 16px;
+  padding-bottom: 5px;
   padding-left: 1px;
   border: 0px;
+  margin-color: #332F2F; 
   margin-top: 0px;
   margin-bottom: 0px;
   margin-left: 20px;
@@ -91,6 +102,7 @@ h3 {
   /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 }
 
+/*the links are in a little black rectangle with white type.*/
 a {
 
   color: white;
@@ -100,12 +112,14 @@ a {
   text-align: left;
   text-transform: uppercase;
   text-decoration: none;
-  padding-top: 0px;
-  padding-bottom: 1px;
-
-  border: 0px;
+  padding-top: 1px;
+  padding-bottom: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+  border-color: #332F2F; 
+  border-bottom: 0px;
   margin-top: 0px;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
   margin-left: 0px;
   margin-right: 0px;
   font-family: Georgia, Times, "Times New Roman", serif;
