--- a/06/global.css
+++ b/06/global.css
@@ -1,2 +1,77 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  color: white;
+  background-color: #85277D;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+}
+
+h2 {
+  background-color: #2D2D2D;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 20px;
+  color: white;
+  text-align: center;
+  padding: 20px 20px 0px 20px;
+  border-top: solid 1px #AD4EB4;  
+}
+
+.festival {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: white;
+  background-color: #2D2D2D;  
+  padding-top:  10px; 
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
+p {
+  background-color: #2D2D2D;
+  color: white;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding: 9px 20px 20px 21px;
+  border-bottom: solid 1px #DCDCDC;  
+  font-size: 16px;
+}
+
+h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  padding: 20px;
+  color: white;
+  text-decoration: underline;
+  font-size: 22px;
+  background-color: #2D2D2D;
+  text-transform: uppercase;
+}
+
+a {
+  background-color: black;
+  color: white;
+  padding: 1px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  padding-top: 4px;
+  padding-right: 4px;
+  padding-bottom: 3px;
+  padding-left: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
