--- a/05/global.css
+++ b/05/global.css
@@ -1,10 +1,11 @@
-body {
+/*All-encompassing body*/
+body{
   background-color: #323232;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #FFFFFF;
 }
-
-h1 {
+/*Film Folk header*/
+h1{
   background-color: #7F3A7D;
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
   color: #FFFFFF;
@@ -14,44 +15,45 @@ h1 {
   padding: 20px;
   border-bottom: 1px solid #CC6CC3;
 }
-
-h2 {
+/*Festival Diary subheader*/
+h2{
   text-align: center;
   font-size: 20px;
   padding-top: 20px;  
 }
-
-#intro {
+/*Intro text below subheader*/
+#intro{
   font-size: 16px;
   padding: 8px 20px 20px 20px;
   border-left: 1px solid red;
   border-bottom: 1px solid #FFFFFF;
   margin: 0;
 }
-
-h3 {
+/*Months*/
+h3{
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
   color: #FFFFFF;
   font-weight: bold;
   font-size: 22px;
   text-transform: uppercase;
   text-decoration: underline;
-  margin: 20px;
+  padding: 22px 20px 0 20px;
 }
-
-p {
+/*Includes Intro, Festival titles, locales*/
+p{
   font-size: 14px;
-  margin: 20px;
-  border: 1px dashed green;
+  padding: 13px 20px 0 20px;
 }
-
-a {
+/*Festival title links*/
+a{
   background-color: #000000;
   color: #FFFFFF;
   font-size: 16px;
   text-transform: uppercase;
-  padding: 2px;
-  margin-bottom: 10px;
+  text-decoration: none;
+  padding: 4px;
+  margin-bottom: 3px;
+  display: inline-block;
 }
 
 
