--- a/07/global.css
+++ b/07/global.css
@@ -54,6 +54,7 @@ div.festival a {
   color: #FFFFFF;
   font-size: 16px;
   text-transform: uppercase;
+  text-decoration: none;
   padding: 2px;
   margin-bottom: 10px;
 }
