--- a/05/global.css
+++ b/05/global.css
@@ -1,2 +1,72 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+h1{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 33px;
+    padding-left: 160px;
+    padding-top: 19px;
+    font-weight: bolder;
+    letter-spacing: -4px;
+    color: #ffffff;
+}
+h2{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding-left: 155px;
+    font-size: 20px;
+    padding-top: 40px;
+    color: #ffffff;
+
+}
+#intro{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 17px;
+    font: inherit;
+    vertical-align: baseline;
+    padding-top: 8px;
+    padding-left: 19px;
+    color: #ffffff;
+    letter-spacing: 1px;
+}
+#january{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-top: 21px;
+    padding-left: 19px;
+    padding-top: 16px;
+    font-size: 25px;
+    text-decoration: underline;
+    font-weight: bolder;
+    letter-spacing: -3px;
+    color: #ffffff;
+}
+#sundance{
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-top: 15px;
+    padding: 0;
+    font-size: 16px;
+    vertical-align: baseline;
+    margin-left: 24px;
+    letter-spacing: 1.5px;
+    color: #ffffff;
+    text-decoration: underline;
+    background-color: grey;
+    margin-right: 200px;
+}
+#march{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    padding-top: 26px;
+    padding-left: 19px;
+    font-size: 22px;
+    vertical-align: baseline;
+    font-weight: bolder;
+    color: #ffffff;
+
+}
+#body{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+#dates{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
