--- a/02/global.css
+++ b/02/global.css
@@ -6,7 +6,7 @@ h1{
     margin-left: 20px;
     font-size: 17px;
     vertical-align: baseline;
-    text-align: -webkit-center;
+    text-align: center;
     background-color: #2D68D0;
     color: #ffffff;
     padding-top: 20px;
@@ -17,7 +17,7 @@ h1{
     text-transform: uppercase;
 }
 p{
-        padding-top: 20px;
+    padding-top: 20px;
     padding-right: 10px;
     padding-bottom: 20px;
     padding-left: 10px;
