--- a/10/global.css
+++ b/10/global.css
@@ -4,14 +4,14 @@ body{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.button {
+.button{
   background: #5080A0;
   margin-left: 10px;
   margin-top: 10px; 
   border-radius: 4px;
 }
 
-a[href^="#"] {
+a{
   float:left;
   font-weight: bold;
   font-size: 10px;
