--- a/05/global.css
+++ b/05/global.css
@@ -10,7 +10,7 @@ body {
 h1 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
   background: #83247D;
-  padding: 20px;
+  padding: 20px 20px 20px 13px;
   font-size: 30px;
   text-align: center;
   border-bottom: 1px solid #C535BD;
@@ -20,7 +20,7 @@ h1 {
 h2 {
   text-align: center;
   font-size: 20px;
-  padding-top: 20px;
+  padding: 20px 20px 20px 13px;
   padding-bottom: 5px;
   background: #333333;
 }
@@ -29,9 +29,8 @@ h3 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
   padding-top: 20px;
   padding-right: 20px;
-  padding-bottom: 10px;
   padding-left: 20px;
-  font-size: 125%;
+  font-size: 22px;
   font-weight: 700;
   text-decoration: underline;
   text-transform: uppercase;
@@ -45,12 +44,25 @@ h3 {
 
 p {
   padding-left: 20px;
+  padding-top: 5px;
   background: #333333;
+  padding-right: 25px;
 }
 
 a {
+  display: inline-block;
+  margin-top: 10px;
   background: black;
+  padding: 3px;
   text-decoration: none;
   color: white;
   text-transform: uppercase;
+}
+
+.more_info {
+  background: #333333;
+  color: yellow;
+  font-size: 14px;
+  padding-left: 20px;
+  
 }
