--- a/05/global.css
+++ b/05/global.css
@@ -16,7 +16,7 @@ h2 {
   font-size: 20px;
   color: white;
   text-align: center;
-  padding: 20px 20px 0px 20px;
+  padding: 20px 20px 0 20px;
   border-top: solid 1px #AD4EB4;  
 }
 
@@ -25,9 +25,9 @@ p {
   font-size: 14px;
   color: white;
   background-color: #2D2D2D;  
-  padding-top:  10px; 
-  padding-bottom: 10px;
-  padding-left: 20px;
+  padding: 0 20px;
+  padding-top: 14px;
+  padding-bottom: 0px
 }
 
 #intro {
@@ -41,7 +41,7 @@ p {
 
 h3 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   color: white;
   text-decoration: underline;
   font-size: 22px;
@@ -52,15 +52,15 @@ h3 {
 a {
   background-color: black;
   color: white;
-  padding: 1px;
+  padding: 4px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding-top: 4px;
-  padding-right: 4px;
-  padding-bottom: 3px;
-  padding-left: 2px;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
+  display: inline-block;
+  margin-bottom: 2px;
+  margin-top: 0px;
+
 }
 
 
