--- a/06/global.css
+++ b/06/global.css
@@ -1,2 +1,11 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+    color: white;
+    text-align: center;
+    padding: 27px;
+    border-bottom: solid hotpink;
+    border-width: 1px;
+    background-color: #66296A;
+}
