--- a/10/global.css
+++ b/10/global.css
@@ -1,13 +1,38 @@
 /* Actual font is unknown. Use any from past assignments. */
+/*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;*/
 .box{
-  width: 100px;
+  width: 101px;
   float: left;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 10px;
-  word-wrap:break-word;
-  border-style:solid;
+  font-size: 11px;
+  border-right-style:solid;
   border-width: 2px;
+  margin: 10px 0px 0px 10px;
+  padding: 0px 30px 0px 0px;
 }
 #clear{
   clear:both;
 }
+
+h4{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*This is the extra div that was in the html. Put this guy here for safe keeping.*/
+/*<div class="box">
+  <h4>Great Reads</h4>
+  <div class="blurb">Delve into the week’s most engaging reporting and writing.</div>
+  <div id="clear"></div>
+</div>*/
