--- a/08/global.css
+++ b/08/global.css
@@ -1,2 +1,40 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+
+#intro {
+
+}
+
+
+.month {
+
+}
+
+.festval {
+
+}
+
+.details {
+
+}
+
+.location {
+
+}
+
+.dates {
+
+}
+
+h1 {
+
+}
+
+h2 {
+
+}
+
+a.festival {
+
+}
