--- a/09/global.css
+++ b/09/global.css
@@ -1,2 +1,23 @@
 /* Actual font is unknown. Use this--it's close enough: */
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+.button_container {
+  margin: 10px 0px 5px 9px;
+  margin: 10px -4px 5px 9px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  float: left;
+}
+
+.button {
+  display: inline-block;
+  background: #6288A5;
+  color: #FFFFFF;
+  border: 2px solid #6288A5;
+  border-radius: 3px;
+  font-weight: bold;
+  align-content: center;
+  padding: 7px 10px 7px 9px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 10px;
+}
