--- a/07/global.css
+++ b/07/global.css
@@ -1,10 +1,11 @@
+/*Body, parent*/
 body {
   background-color: #323232;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #FFFFFF;
   border-bottom: 5px solid #FFFFFF;
 }
-
+/*Film Folk header*/
 h1 {
   background-color: #7F3A7D;
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
@@ -15,25 +16,26 @@ h1 {
   padding: 20px;
   border-bottom: 1px solid #CC6CC3;
 }
-
+/*div Intro, h2*/
 #intro h2 {
   text-align: center;
   font-size: 20px;
   padding-top: 20px;  
 }
-
+/*div Intro, p*/
 #intro p {
   font-size: 16px;
   padding: 8px 20px 20px 20px;
   border-left: 1px solid red;
-  border-bottom: 1px solid #FFFFFF;
+  border-bottom: 1px solid #CBCBCB;
   margin: 0;
 }
-
+/*div Class Month, parent*/
 div.month {
-  border-bottom: 1px solid #FFFFFF;
+  padding: 20px;
+  border-bottom: 1px solid #CBCBCB;
 }
-
+/*div Class Month, h3*/
 div.month h3 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
   color: #FFFFFF;
@@ -41,20 +43,20 @@ div.month h3 {
   font-size: 22px;
   text-transform: uppercase;
   text-decoration: underline;
-  margin: 20px;
 }
-
+/*div Class Festival, parent*/
 div.festival {
   font-size: 14px;
-  margin: 20px;
-}
-
+/*  padding: 12px 20px 20px 20px;
+*/}
+/*div Class Festival, a*/
 div.festival a {
   background-color: #000000;
   color: #FFFFFF;
   font-size: 16px;
   text-transform: uppercase;
   text-decoration: none;
-  padding: 2px;
-  margin-bottom: 10px;
+  padding: 4px;
+  margin: 15px 0 3px 0;
+  display: inline-block;
 }
