--- a/10/global.css
+++ b/10/global.css
@@ -3,21 +3,34 @@
 .box{
   width: 101px;
   float: left;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 11px;
-  border-right-style:solid;
-  border-width: 2px;
   margin: 10px 0px 0px 10px;
   padding: 0px 30px 0px 0px;
 }
 #clear{
   clear:both;
 }
+#critics_take{
+  border-style:none;
+}
+#conversation{
+  border-right-style:solid;
+  border-width: 1px;
+  padding-bottom: 10px
+}
+#smarter_living{
+  border-right-style:solid;
+  border-width: 1px;
+}
 
 h4{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 15px;
   font-weight: bold;
+}
+.blurb{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  padding-top: 5px
 }
 
 
