--- a/06/global.css
+++ b/06/global.css
@@ -10,55 +10,56 @@ h1 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 }
 
-h2 {
+#intro {
   background-color: #2D2D2D;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 20px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;  
   color: white;
+}
+
+h2 {
+  font-size: 20px;
   text-align: center;
   padding: 20px 20px 0px 20px;
   border-top: solid 1px #AD4EB4;  
+}
+
+p {
+  padding: 9px 20px 20px 21px;
+  border-bottom: solid 1px #DCDCDC;  
+  font-size: 16px;
+}
+
+.month {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: white;
+  background-color: #2D2D2D;
 }
 
 .festival {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: white;
-  background-color: #2D2D2D;  
-  padding-top:  10px; 
-  padding-bottom: 10px;
-  padding-left: 20px;
-}
-
-p {
-  background-color: #2D2D2D;
-  color: white;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding: 9px 20px 20px 21px;
-  border-bottom: solid 1px #DCDCDC;  
-  font-size: 16px;
+  padding: 14px 20px 0px 20px;
 }
 
 h3 {
-  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-  padding: 20px;
-  color: white;
+  padding: 20px 20px 0 20px;
   text-decoration: underline;
   font-size: 22px;
-  background-color: #2D2D2D;
   text-transform: uppercase;
 }
 
 a {
   background-color: black;
+  padding: 4px;
   color: white;
-  padding: 2px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
+  display: inline-block;
+  margin-bottom: 2px;
+  margin-top: 0px;
 }
-
 
 
 
