--- a/10/global.css
+++ b/10/global.css
@@ -1,1 +1,17 @@
 /* Actual font is unknown. Use any from past assignments. */
+
+.box{
+  float:left;
+  font-size: 10px;
+  padding: 5px;
+  width: 100px;
+  margin-top: 5px;
+  margin-left: 5px;
+  border-right: solid black 1px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h4{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+}
