--- a/06/global.css
+++ b/06/global.css
@@ -26,7 +26,7 @@ h2{
 /*actually a div class that includes month/link/info of all festivals*/
 .month{
   color: white;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   background-color: #262626;
 }
 /*just the month header itself*/
@@ -36,7 +36,7 @@ h3{
 }
 
 .festival{
-  padding-top: 5px
+  padding-top: 15px
 }
 
 a{
