Finished fixing through exercise 7

--- a/06/global.css
+++ b/06/global.css
@@ -11,7 +11,7 @@ h1 {
   text-align: center;
   background: #83247D;
   border-bottom: 1px solid #C535BD;
-  padding: 20px;
+  padding: 20px 0 20px 0;
   font-size: 30px;
 }
 
@@ -33,18 +33,12 @@ h1 {
 }
 
 #intro h2 {
-  padding-left: 15px;
-}
-
-.festival{
   padding-left: 20px;
-  padding-top: 20px;
-
 }
 
 .month{
   background: #333333;
-  padding-top: 20px;
+  padding-left: 20px;
 }
 
 .month h3{
@@ -53,7 +47,7 @@ h1 {
   font-weight: bold;
   text-decoration: underline;
   text-transform: uppercase;
-  padding-left: 20px;
+  padding-top: 20px;
 }
 
 .month p{
@@ -62,10 +56,13 @@ h1 {
 }
 
 a {
+  display: inline-block;
+  margin-top: 15px;
   background: black;
   padding: 3px;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 7px;
   color: white;
 }
