--- a/05/global.css
+++ b/05/global.css
@@ -10,7 +10,7 @@ body {
 h1 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
   background: #83247D;
-  padding: 20px 20px 20px 13px;
+  padding: 20px 20px 20px 20px;
   font-size: 30px;
   text-align: center;
   border-bottom: 1px solid #C535BD;
@@ -20,7 +20,7 @@ h1 {
 h2 {
   text-align: center;
   font-size: 20px;
-  padding: 20px 20px 20px 13px;
+  padding: 20px 20px 20px 20px;
   padding-bottom: 5px;
   background: #333333;
 }
@@ -56,12 +56,11 @@ a {
   background: black;
   padding: 3px;
   text-decoration: none;
-  color: yellow;
   text-transform: uppercase;
+  color: white;
 }
 
 .more_info {
   background: #333333;
-  color: yellow;
   font-size: 14px;
 }
