--- a/07/global.css
+++ b/07/global.css
@@ -40,6 +40,7 @@ h1 {
   border-bottom: 1px solid white;
   background: #333333;
   padding-left: 20px;
+  padding-bottom: 18px;
 }
 
 .month h3 {
@@ -49,21 +50,22 @@ h1 {
   text-decoration: underline;
   text-transform: uppercase;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 5px;
 }
 
 a {
+  display: inline-block;
   background: black;
   padding: 3px;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
-  color: white;
+  color: yellow;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
-.location {
-  color: black;
-  background: white;
-  padding: 3px;
-  
+.festival p {
+  color: orange;
+  font-size: 14px;
 }
