10 done, not exact but close. Dealing with a different font

--- a/10/global.css
+++ b/10/global.css
@@ -2,16 +2,24 @@
 
 .box{
   float:left;
-  font-size: 10px;
-  padding: 5px;
-  width: 100px;
-  margin-top: 5px;
+  padding: 0 10px;
+  width: 132px;
+  margin-top: 10px;
   margin-left: 5px;
-  border-right: solid black 1px;
+  border-left: solid black 1px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  line-height: 12px;
+  font-size: 12px;
 }
 
 h4{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
+  font-size: 15px;
+  padding-bottom: 5px;
+}
+
+.blurb{
+  padding-top: 4px;
+  line-height: 14px;
 }
