--- a/11/global.css
+++ b/11/global.css
@@ -1,1 +1,19 @@
 /* Guess the font. Just get close--doesn't have to be perfect. */
+
+
+img{
+  margin-left: 4px;
+  margin-top: 5px;
+  float: left; 
+}
+
+.icon_text {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 10px;
+  color: #525252;
+  margin-top: 7px;
+  margin-left: 7px;
+}
+
