--- a/11/global.css
+++ b/11/global.css
@@ -8,12 +8,14 @@ img{
 }
 
 .icon_text {
+  display: inline-block;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 10px;
   color: #525252;
-  margin-top: 7px;
-  margin-left: 7px;
+  margin-top: 8px;
+  margin-left: 6px;
 }
+
 
