question! in 7, i'm trying to reduce the space between the two festivals listed under march (they fall under the 'festival' tag) but i'm not sure how to change the space that exists ONLY between these two. do i try to manipulate the <br> tags?

--- a/07/global.css
+++ b/07/global.css
@@ -60,8 +60,11 @@ a{
   text-transform: uppercase;
   text-decoration: none;
   background-color: black;
-  padding: 4px;
-  padding-bottom: 0px;
+  padding: 6px;
   margin-bottom: 4px;
   display: inline-block;
+}
+
+br {
+  padding-bottom: 0px;
 }
