--- a/06/global.css
+++ b/06/global.css
@@ -1,2 +1,48 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+  border-bottom: 1px solid #AD03A3;
+  padding: 20px 0 20px 0;
+  text-align: center;
+  background-color: #720D6B;
+  color: #fff;
+  font-size: 30px;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+}
+
+#intro {
+  border-bottom: 1px solid #9A9A9A;
+  background-color: #262626;
+  color: #fff;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#intro h2 {
+  padding: 20px 0 0 0px;
+  text-align: center;
+  font-size: 20px;
+}
+
+#intro p {
+  padding: 9px 1px 20px 20px;
+}
+
+.month {
+  background-color: #262626;
+  color: #fff;
+}
+
+.festival {
+
+}
+
+.festival a {
+  padding: 1px;
+  background-color: #000;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
