--- a/05/global.css
+++ b/05/global.css
@@ -17,7 +17,6 @@ h1 {
   padding: 20px;
   padding-bottom: 19px;
   font-size: 24pt;
-  letter-spacing: -1px;
   color: white;
   border-bottom-style: solid;
   border-bottom-width: 1px;
@@ -59,7 +58,6 @@ p, h3 {
 
 h3 {
   padding-top: 20px;
-  padding-bottom: 20px;
   font-size: 16pt;
   text-transform: uppercase;
   color: white;
@@ -67,21 +65,25 @@ h3 {
 }
 
 a {
-  text-transform: uppercase;
-  color: white;
-  background-color: #000000;
-  padding: 2px;
-  padding-top: none;
-  text-decoration: none;
-  font-size: 12pt;
-  line-height: 10px;
+    text-transform: uppercase;
+    color: white;
+    background-color: #000000;
+    padding: 3px;
+    text-decoration: none;
+    font-size: 12pt;
+    line-height: 10px;
+    display: inline-block;
+    margin-bottom: 6px;
+    margin-top: 20px;
 }
 
- p:not(#intro):not(a) {
+ p:not(#intro) {
   color: white;
-  font-size: 10pt;
-  padding-top: 5px;
+  font-size: 10.5pt;
   line-height: 15px;
+}
+.multiple {
+  margin-top: 10px;
 }
 
 
