--- a/07/global.css
+++ b/07/global.css
@@ -34,7 +34,7 @@ h2{
 /*actually a div class that includes month/link/info of all festivals*/
 .month{
   color: white;
-  padding: 20px 20px 0 20px;
+  padding: 20px;
   background-color: #262626;
   border-bottom: solid white;
   border-width: 1px;
@@ -51,7 +51,6 @@ h3{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   padding-top: 15px;
-  padding-bottom: 21px;
 }
 
 a{
