--- a/10/global.css
+++ b/10/global.css
@@ -1,1 +1,26 @@
 /* Actual font is unknown. Use any from past assignments. */
+
+.box {
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+float: left;
+padding: 2px 10px;
+margin: 10px 0px;
+border-left: solid 1px black;
+width: 120px;
+}
+
+h4 {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.blurb {
+font-size: 11px;
+padding-top: 5px;
+margin-right: 5px;
+line-height: 1.5;
+}
+
+.box:first-child {
+  border-left: none;
+}
