--- a/05/global.css
+++ b/05/global.css
@@ -7,6 +7,11 @@ body {
 
 #intro {
   font-size: 16px;
+  padding-top: 1px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  border-bottom: 1px solid green;
 }
 
 p {
@@ -21,33 +26,32 @@ p {
 
 h1 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-  font-weight: bold;  
+  font-weight: bold;
   background-color: #812C5B;
   font-size: 30px;
   text-align: center;
   padding: 20px;
+  border-bottom: 1px solid blue;
 }
 
 h2 {
   text-align: center;
   background-color: #39362D;
   font-size: 20px;
-  padding-top: 21px;
-  padding-bottom: 9px;
+  padding-top: 20px;
+  padding-bottom: 8px;
 }
 
 h3 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-  font-weight: bold;  
+  font-weight: bold;
   text-transform: uppercase;
   text-decoration: underline;
   background-color: #39362D;
-  font-size: 22px; 
-  border-top: 1px;
-  border-style: solid;
-  border-color: white;
+  font-size: 22px;
   padding-top: 20px;
-  padding-left:20px;
+  padding-left: 20px;
+  padding-bottom: 16px;
 }
 
 a {
@@ -56,5 +60,9 @@ a {
   text-transform: uppercase;
   text-decoration:none;
   color: white;
-  padding:1px;
+  margin-top: 0px;
+  padding-top: 3px;
+  padding-right: 4px;
+  padding-bottom: 3px;
+  padding-left: 3px;
 }
